[package]
name = "cupholder"
version = "0.0.0"
edition = "2018"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]

[dependencies]
bitflags = "1.2.1"
skylight = { git = "https://github.com/adumbidiot/skylight-rs", features = [ "handleapi" ] }
winapi = { version = "0.3.9", features = [ "fileapi", "winbase", "ioapiset", "winioctl" ] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3